# CATS

./: CMakeLists.txt  Dockerfile  README.md  package.xml  travis.yml
config/: cats_motion_param.yaml  cats_t-frog_kai.param  controller.yaml  pcd_crcr.rviz  test.rviz  tsukuba_cats.rviz  urdf.rviz  waypoint.rviz
launch/: amcl.launch  cats_hardware.launch  cats_ps4.launch  cats_vehicle.launch  cheat_cats_ps4.launch  control.launch  dead_reckoning.launch  display.launch  front_cam.launch  front_laser.launch  gazebo.launch  gmapping.launch  human_rec.launch  map_server.launch  move_base.launch  pcd_crcr.launch  rear_laser.launch  robot_state.launch  rviz.launch  stop_pi.launch  teleop_joy.launch  test.launch  urg_lidar.launch  velodyne_to_laser.launch
param/: kakunin_waypoints.txt
params/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
robot/: cats.urdf  infant3.urdf
scripts/: cats_hardware.sh  pcd_crcr.sh  target_human_recognizer.py  teleop.sh  trafic_light_discriminator.py  waypoint_maker.py  waypoint_pochi_pochi.sh  white_line_detector.py  white_line_detector_bag.sh
src/: amcl2pose.cpp  dead_reckoning.cpp  keyboard_interface.cpp  pcd_crcr.cpp  sending_goals.cpp  target_human_point.cpp  task_manager.cpp  teleop_joy.cpp  tf_map2gps.cpp  tkhsh_imu.cpp
urdf/: common.xacro
world/: D1.world
wp_list/: d_kan_indoor.txt  d_kan_indoor2.txt  gps.csv  gps_xy.csv  kakunin_waypoints.txt  readme_tkb_2018.txt  sq2_d_kan_around2.txt  sq2_d_kan_indoor.txt  tkb_all_waypoints.txt  (+5 more)
(+12 files in other folders)
